--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "components/accordion"
+    "components/accordion",
+    "server.js"
   ],
   "exclude": ["node_modules"]
 }
